Correct spacing for branches list in colors and clouds themes.

--- a/themes/colors/css/colors.css
+++ b/themes/colors/css/colors.css
@@ -373,6 +373,8 @@ html[dir=rtl] #relationship_chart {margin-right:10px;}
 
 .list_table {margin:0 auto;}
 #branches-page table, #medialist-page .list_table, #medialist-page .list_table_controls  {margin:0 auto;}
+#branches-page ol {margin-left: 40px;font-size:14px;}
+html[dir=rtl] #branches-page ol {margin-right: 40px;}
 #medialist-page .list_table_controls  {width:100%;}
 .list_table_controls td {min-width:40px;padding:1px;text-align:center;}
 
